// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display math custom delimiters does not render default delimiters 1`] = `
"<p>text before</p>
<p><math-renderer class="js-inline-math" style="display: inline-block" data-static-url="">a^2 + b^2 = c^2</math-renderer></p>
<p>text after</p>
"
`;

exports[`display math custom delimiters renders math delimited by custom delimiters 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block" data-static-url="">a^2 + b^2 = c^2</math-renderer>
<p>text after</p>
"
`;

exports[`display math default delimiters does not render without whitespace 1`] = `
"<p>hello<math-renderer class="js-inline-math" style="display: inline-block" data-static-url="">a^2 + b^2 = c^2</math-renderer>world</p>
"
`;

exports[`display math default delimiters renders alone 1`] = `
"<math-renderer class="js-display-math" style="display: block" data-static-url="">a^2 + b^2 = c^2</math-renderer>
"
`;

exports[`display math default delimiters renders at beginning 1`] = `
"<math-renderer class="js-display-math" style="display: block" data-static-url="">a^2 + b^2 = c^2</math-renderer>
<p>  text after
  </p>
"
`;

exports[`display math default delimiters renders at end of text 1`] = `
"<p>text before
  <math-renderer class="js-inline-math" style="display: inline-block" data-static-url="">a^2 + b^2 = c^2</math-renderer></p>
"
`;

exports[`display math default delimiters renders surrounded by text 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block" data-static-url="">a^2 + b^2 = c^2</math-renderer>
<p>text after</p>
"
`;

exports[`display math default delimiters renders without surrounding blank lines 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block" data-static-url="">a^2 + b^2 = c^2</math-renderer>
<p>text after</p>
"
`;

exports[`display math default delimiters sanitizes HTML inside 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block" data-static-url="">a&amp;lt;script>alert('hello')&amp;lt;/script></math-renderer>
<p>text after</p>
"
`;
